WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304637
[GStreamer][WebRTC] ASSERT when running imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-addTcpIceCandidate.html
https://bugs.webkit.org/show_bug.cgi?id=304637
Summary
[GStreamer][WebRTC] ASSERT when running imported/w3c/web-platform-tests/webrt...
Philippe Normand
Reported
2025-12-23 01:06:57 PST
STDERR: ASSERTION FAILED: underlyingStringIsValid() STDERR: /var/home/phil/WebKit/local-build-gtk/WebKitBuild/GTK/Release/WTF/Headers/wtf/text/StringView.h(485) : std::span<const Latin1Character> WTF::StringView::span8() const STDERR: 1 0x7f331cb61751 WTF::StringView WTF::StringView::trim<bool (char8_t)>(bool ( const&)(char8_t)) const STDERR: 2 0x7f331cb61095 WebCore::GStreamerMediaEndpoint::addIceCandidate(WebCore::GStreamerIceCandidate&, WTF::Function<void (WebCore::ExceptionOr<std::optional<WebCore::PeerConnectionBackend::DescriptionStates> >&&)>&&) STDERR: 3 0x7f331cb65e14 WebCore::GStreamerPeerConnectionBackend::doAddIceCandidate(WebCore::RTCIceCandidate&, WTF::Function<void (WebCore::ExceptionOr<std::optional<WebCore::PeerConnectionBackend::DescriptionStates> >&&)>&&) STDERR: 4 0x7f331caee1dd WebCore::PeerConnectionBackend::addIceCandidate(WebCore::RTCIceCandidate*, WTF::Function<void (WebCore::ExceptionOr<void>&&)>&&) STDERR: 5 0x7f331cb21a35 WTF::Detail::CallableWrapper<WebCore::RTCPeerConnection::addIceCandidate(std::optional<mpark::variant<WebCore::RTCIceCandidateInit, WTF::RefPtr<WebCore::RTCIceCandidate, WTF::RawPtrTraits<WebCore::RTCIceCandidate>, WTF::DefaultRefDerefTraits<WebCore::RTCIceCandidate> > > >&&, WTF::Ref<WebCore::DeferredPromise, WTF::RawPtrTraits<WebCore::DeferredPromise>, WTF::DefaultRefDerefTraits<WebCore::DeferredPromise> >&&)::$_2, void, WTF::Ref<WebCore::DeferredPromise, WTF::RawPtrTraits<WebCore::DeferredPromise>, WTF::DefaultRefDerefTraits<WebCore::DeferredPromise> >&&>::call(WTF::Ref<WebCore::DeferredPromise, WTF::RawPtrTraits<WebCore::DeferredPromise>, WTF::DefaultRefDerefTraits<WebCore::DeferredPromise> >&&) STDERR: 6 0x7f331cb145e4 WebCore::RTCPeerConnection::chainOperation(WTF::Ref<WebCore::DeferredPromise, WTF::RawPtrTraits<WebCore::DeferredPromise>, WTF::DefaultRefDerefTraits<WebCore::DeferredPromise> >&&, WTF::Function<void (WTF::Ref<WebCore::DeferredPromise, WTF::RawPtrTraits<WebCore::DeferredPromise>, WTF::DefaultRefDerefTraits<WebCore::DeferredPromise> >&&)>&&) STDERR: 7 0x7f331cb15300 WebCore::RTCPeerConnection::addIceCandidate(std::optional<mpark::variant<WebCore::RTCIceCandidateInit, WTF::RefPtr<WebCore::RTCIceCandidate, WTF::RawPtrTraits<WebCore::RTCIceCandidate>, WTF::DefaultRefDerefTraits<WebCore::RTCIceCandidate> > > >&&, WTF::Ref<WebCore::DeferredPromise, WTF::RawPtrTraits<WebCore::DeferredPromise>, WTF::DefaultRefDerefTraits<WebCore::DeferredPromise> >&&) STDERR: 8 0x7f331c0e8b28 WebCore::jsRTCPeerConnectionPrototypeFunction_addIceCandidate(JSC::JSGlobalObject*, JSC::CallFrame*) STDERR: 9 0x7f32bf20c038 ??? STDERR: WebKitWebProcess terminated (pid 176913) for reason: crash⏎
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2025-12-23 01:30:05 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55825
EWS
Comment 2
2026-01-12 03:36:32 PST
Committed
305450@main
(b9c051f0d274): <
https://commits.webkit.org/305450@main
> Reviewed commits have been landed. Closing PR #55825 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-01-12 03:37:11 PST
<
rdar://problem/167977241
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug